welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:-24: error: Unmatched closing brace '}' ignored here
	}
        ^Runner:-23: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Runner:-12: error: illegal start of statement (no modifiers allowed here)
	override def forward() {
        ^Runner:1: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^